feat: aba demonstração terminada
finalização da aba demonstração

--- a/index.html
+++ b/index.html
@@ -76,11 +76,26 @@
 
     <section class="demonstracao">
 
-    
     <h3>Demonstração</h3>
         <p>APÓS A EXPLICAÇÃO DE FUNCIONAMENTO DO APLICATIVO, ELE ESTÁ<br>DISPONÍVEL PARA TESTES, NO LINK ABAIXO É POSSÍVEL ACESSAR UMA<br> 
             SIMULAÇÃO DO CÓDIGO, NÃO SE ESQUEÇA DE MANDAR A SUA<br> AVALIAÇÃO A RESPEITO DO APLICATIVO</p>
+           <a href="#" class="demo-button">Acessar Link</a>
+           <a href="#" class = "play-button">Play</a>
+           <img class="control" src="./controle.png" alt="">
             
+    </section>
+
+    <section class="Contact">
+        <h2>Participe dessa iniciativa conosco!</h2>
+        <h2>Contato</h2>
+        <h3>Nome</h3>
+        <input id="input-do-email">
+
+     <h3>E-mail</h3>
+        <input id="input-do-nome">
+        <br><br>
+        <button>Entrar</button>
+
     </section>
 </body>
 </html>
